# yumenet-client

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
config/: config.json  controls.ini  flags.ini  main.ini
src/: README.md  components.hpp  main.cc  main.cpp
src/comp/: comp.hh  components.hpp  direction.hpp  move.hh  move.hpp  origin.hpp  player.hpp  position.hpp  render.hpp  scale.hpp  tags.hh  tags.hpp  tile.hpp  types.hpp
src/comp/coord/: direction.hh  position.hpp  rotation.hpp
src/core/: app.cc  app.cpp  app.hh  app.hpp  consts.hh  consts.hpp  game.cc  game.cpp  game.hh  game.hpp  world.cc  world.cpp  world.hh  world.hpp
src/sys/: control.cc  control.cpp  control.hh  control.hpp  create.cc  create.hh  input.hpp  move.cc  move.cpp  move.hh  move.hpp  render.cc  render.cpp  render.hh  render.hpp  state.cpp  state.hpp  update.cc  update.hh
src/utils/: consts.hh  dir_to_pos.cc  dir_to_pos.cpp  dir_to_pos.hh  dir_to_pos.hpp  rng.hpp  stob.hh  types.hh
